# Video-Similarity-Search

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
config/: video_search_similarity.yaml
video_similarity_search/: __init__.py  cli.py  schema.py
video_similarity_search/backend/: __init__.py  database_handler.py  embeddingextractor.py  model.py  query_result_formatter.py  schema.py  search.py  video_handler.py  video_processor.py  video_segment_extractor.py
